<resources>
    <string name="app_name">FairyStore</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="signup_now">SignUp Now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fairy_store">Fairy Store</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product Title</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="fairy">Fairy</string>
    <string name="product_name">Product Name</string>
    <string name="_0_0">0.0</string>
    <string name="desctiption">Desctiption</string>
    <string name="_0">0</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="address2">Address:</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="zipcode">Zipcode</string>
    <string name="passwordd">Password</string>
</resources>